--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <style>
-        h1 {
-            font-family: Arial, sans-serif;
-            font-size: 20px;
-            text-align: center;
-            color: violet;
-        }
-        h2{
-        	font-family: sans-serif;
-        	font-size: 15px;
-        	text-align: center;
-        	color: white;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fernando Alves - Apresentação</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #000000;">
-    <center><img src="https://lh3.googleusercontent.com/a/ACg8ocJcUF2UKl6MHFgf6K_42qIZKPoQvkq39_x1TvIDZvNGraw=s360-c-no" height="10%" width="10%" style="border-radius: 50%;"></center>
-    <h1><p>APRESENTAÇÃO</p></h1> 
-    <h2> Meu nome e Fernando Alves de Souza ,tenho 18 anos,moro em Morrinhos ,estou cursando TSI(Tecnologia em Sistemas para Internet) no IF goiano.</h2>
-    <h1>O que eu gosto de fazer nos fim de semanas?</h1>
-    <h2>Eu costumo ir para Caldas Novas praticamente todos os fim de semanas.</h2>
-    <h1>Filmes e séries</h1>
-    <h2>Stranger things;<br>
-   		interestelar;<br>
-	 Top Gun: Maverick.<br></h2>
-	<h1>O que eu gosto de ler?</h1>
-	<h2>Eu não tenho o habito de ler,mas gostaria de ter.</h2>
-	<h1>Meus gostos.</h1>
-	<h2>gosto de ouvir musicas praticamente o dia todo;<br>
-		gosto de jogar Red Dead Redemption 2;<br>
-		gosto de carros;<br>
-		trabalho das 08:00 até as 16:00</h2>
+<body>
+    <header>
+        <img src="https://lh3.googleusercontent.com/a/ACg8ocJcUF2UKl6MHFgf6K_42qIZKPoQvkq39_x1TvIDZvNGraw=s360-c-no" alt="Foto de Fernando Alves">
+        <h1>Bem-vindo ao meu site!</h1>
+    </header>
+    <main>
+        <section class="section">
+            <h1>Apresentação</h1>
+            <h2>Meu nome é Fernando Alves de Souza, tenho 18 anos, moro em Morrinhos e estou cursando TSI (Tecnologia em Sistemas para Internet) no IF Goiano.</h2>
+        </section>
+        <section class="section">
+            <h1>O que eu gosto de fazer nos fins de semana?</h1>
+            <h2>Eu costumo ir para Caldas Novas praticamente todos os fins de semana.</h2>
+        </section>
+        <section class="section">
+            <h1>Filmes e séries favoritos</h1>
+            <h2>Stranger Things;<br>Interestelar;<br>Top Gun: Maverick.</h2>
+        </section>
+        <section class="section">
+            <h1>Leitura</h1>
+            <h2>Eu ainda não tenho o hábito de ler, mas gostaria de desenvolvê-lo.</h2>
+        </section>
+        <section class="section">
+            <h1>Meus gostos</h1>
+            <h2>Gosto de ouvir música praticamente o dia todo;<br>Jogar Red Dead Redemption 2;<br>Carros;<br>Trabalho das 08:00 até as 16:00.</h2>
+        </section>
+    </main>
+    <footer>
+        <p>Feito por: <a href="#">Fernando Alves</a></p>
+        <button onclick="alert('Obrigado por visitar!')">Clique aqui!</button>
+    </footer>
 </body>
-<footer>
-	<p style="color:violet;"> Feito por: <a style="color:white";> Fernando Alves</a></p>
-</footer>
 </html>
